--- a/oap-ws/oap-ws-admin-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-admin-ws/src/main/resources/META-INF/oap-module.conf
@@ -19,4 +19,12 @@ services {
       port = httpprivate
     }
   }
+
+  ws-schema {
+    implementation = oap.ws.admin.SchemaWS
+    ws-service {
+      path = system/admin/schema
+      port = httpprivate
+    }
+  }
 }
