--- a/oap-ws/oap-ws-admin-ws/src/test/resources/application.test.conf
+++ b/oap-ws/oap-ws-admin-ws/src/test/resources/application.test.conf
@@ -1,7 +1,12 @@
 boot.main = oap-ws-admin-ws-test
 
 services {
-  oap.oap-http-server.parameters.port = ${TEST_HTTP_PORT}
+  oap-http {
+    oap-http-server.parameters {
+      defaultPort.httpPort = ${TEST_HTTP_PORT}
+      additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
+    }
+  }
   
   oap-ws.session-manager.parameters.cookieDomain: ""
 }
