OAP-129 SSO: ref token validation

--- a/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
@@ -1,23 +1,23 @@
 name = oap-ws-sso-api
 
 services {
-  oap-ws-sso-roles-provider.implementation = oap.ws.sso.ConfigSecurityRolesProvider
-
-  oap-ws-sso-roles {
-    implementation = oap.ws.sso.SecurityRoles
-    parameters.provider = <modules.this.oap-ws-sso-roles-provider>
-  }
-
-  jwt-token-generator {
-    implementation = oap.ws.sso.JwtTokenGenerator
-    parameters {
-        accessSecret = <change me>
-        refreshSecret = <change me>
-        issuer = <change me>
-        accessSecretExpiration = 15m
-        refreshSecretExpiration = 1d
-    }
-  }
+//  oap-ws-sso-roles-provider.implementation = oap.ws.sso.ConfigSecurityRolesProvider
+//
+//  oap-ws-sso-roles {
+//    implementation = oap.ws.sso.SecurityRoles
+//    parameters.provider = <modules.this.oap-ws-sso-roles-provider>
+//  }
+//
+//  jwt-token-generator {
+//    implementation = oap.ws.sso.JwtTokenGenerator
+//    parameters {
+//        accessSecret = <change me>
+//        refreshSecret = <change me>
+//        issuer = <change me>
+//        accessSecretExpiration = 15m
+//        refreshSecretExpiration = 1d
+//    }
+//  }
 
   oap-ws-sso-api-key-interceptor {
     implementation = oap.ws.sso.interceptor.ApiKeyInterceptor
@@ -30,12 +30,12 @@ services {
     implementation = oap.ws.sso.interceptor.ThrottleLoginInterceptor
   }
 
-  oap-ws-sso-token-extractor {
-    implementation = oap.ws.sso.JWTExtractor
-      parameters {
-        secret = <change me>
-        issuer = <change me>
-        roles = <modules.this.oap-ws-sso-roles>
-      }
-  }
+//  oap-ws-sso-token-extractor {
+//    implementation = oap.ws.sso.JWTExtractor
+//      parameters {
+//        secret = <change me>
+//        issuer = <change me>
+//        roles = <modules.this.oap-ws-sso-roles>
+//      }
+//  }
 }
