--- a/oap-ws/oap-ws-sso/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso/src/main/resources/META-INF/oap-module.conf
@@ -8,24 +8,24 @@ services {
   oap-ws-sso-user-provider {
     implementation = oap.ws.sso.UserProvider
     remote {
-      name = oap-ws-sso-user-provider-server
+      name = oap-account.default-user-provider
     }
   }
 
-  oap-ws-sso-authenticator {
-    implementation = oap.ws.sso.JwtUserAuthenticator
-    parameters {
-      userProvider =  <modules.this.oap-ws-sso-user-provider>
-      jwtTokenGenerator = <modules.oap-ws-sso-api.jwt-token-generator>
-      jwtExtractor = <modules.oap-ws-sso-api.oap-ws-sso-token-extractor>
-    }
-  }
+//  oap-ws-sso-authenticator {
+//    implementation = oap.ws.sso.JwtUserAuthenticator
+//    parameters {
+//      userProvider =  <modules.this.oap-ws-sso-user-provider>
+//      jwtTokenGenerator = <modules.oap-ws-sso-api.jwt-token-generator>
+//      jwtExtractor = <modules.oap-ws-sso-api.oap-ws-sso-token-extractor>
+//    }
+//  }
 
   oap-ws-sso-jwt-security-interceptor {
    implementation = oap.ws.sso.interceptor.JWTSecurityInterceptor
    name = oap-ws-sso-jwt-security-interceptor
    parameters {
-        jwtExtractor = <modules.oap-ws-sso-api.oap-ws-sso-token-extractor>
+//        jwtExtractor = <modules.oap-ws-sso-api.oap-ws-sso-token-extractor>
         userProvider = <modules.this.oap-ws-sso-user-provider>
         roles = <modules.oap-ws-sso-api.oap-ws-sso-roles>
    }
