OAP-129 SSO: ref token validation

--- a/oap-ws/oap-ws-sso/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso/src/main/resources/META-INF/oap-module.conf
@@ -1,8 +1,8 @@
 name: oap-ws-sso
-dependsOn = [
-  oap-ws
-  oap-ws-sso-api
-]
+//dependsOn = [
+//  oap-ws
+//  oap-ws-sso-api
+//]
 
 services {
   oap-ws-sso-user-provider {
@@ -23,11 +23,10 @@ services {
 
   oap-ws-sso-jwt-security-interceptor {
    implementation = oap.ws.sso.interceptor.JWTSecurityInterceptor
-   name = oap-ws-sso-jwt-security-interceptor
    parameters {
 //        jwtExtractor = <modules.oap-ws-sso-api.oap-ws-sso-token-extractor>
         userProvider = <modules.this.oap-ws-sso-user-provider>
-        roles = <modules.oap-ws-sso-api.oap-ws-sso-roles>
+//        roles = <modules.oap-ws-sso-api.oap-ws-sso-roles>
    }
   }
 }
