OAP-129 SSO: ref token validation

--- a/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
@@ -19,12 +19,12 @@ services {
 //    }
 //  }
 
-  oap-ws-sso-api-key-interceptor {
-    implementation = oap.ws.sso.interceptor.ApiKeyInterceptor
-    parameters {
-      authenticator = <modules.oap-ws-sso.oap-ws-sso-authenticator>
-    }
-  }
+//  oap-ws-sso-api-key-interceptor {
+//    implementation = oap.ws.sso.interceptor.ApiKeyInterceptor
+//    parameters {
+//      authenticator = <modules.oap-ws-sso.oap-ws-sso-authenticator>
+//    }
+//  }
 
   oap-ws-sso-throttle-login-interceptor {
     implementation = oap.ws.sso.interceptor.ThrottleLoginInterceptor
