OAP-129 SSO: ref token validation

--- a/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
@@ -19,18 +19,35 @@ services {
 //    }
 //  }
 
-//  oap-ws-sso-api-key-interceptor {
-//    implementation = oap.ws.sso.interceptor.ApiKeyInterceptor
-//    parameters {
+  oap-ws-sso-user-provider {
+    implementation = oap.ws.sso.UserProvider
+    remote {
+      name = oap-account.default-user-provider
+    }
+  }
+
+  oap-ws-sso-api-key-interceptor {
+    implementation = oap.ws.sso.interceptor.ApiKeyInterceptor
+    parameters {
+      userProvider = <modules.this.oap-ws-sso-user-provider>
 //      authenticator = <modules.oap-ws-sso.oap-ws-sso-authenticator>
-//    }
-//  }
+    }
+  }
 
   oap-ws-sso-throttle-login-interceptor {
     implementation = oap.ws.sso.interceptor.ThrottleLoginInterceptor
   }
 
-//  oap-ws-sso-token-extractor {
+  oap-ws-sso-jwt-security-interceptor {
+    implementation = oap.ws.sso.interceptor.JWTSecurityInterceptor
+    parameters {
+      //        jwtExtractor = <modules.oap-ws-sso-api.oap-ws-sso-token-extractor>
+      userProvider = <modules.this.oap-ws-sso-user-provider>
+      //        roles = <modules.oap-ws-sso-api.oap-ws-sso-roles>
+    }
+  }
+
+  //  oap-ws-sso-token-extractor {
 //    implementation = oap.ws.sso.JWTExtractor
 //      parameters {
 //        secret = <change me>
