OAP-129 SSO: ref token validation

--- a/oap-http/oap-http/pom.xml
+++ b/oap-http/oap-http/pom.xml
@@ -21,6 +21,13 @@
         </dependency>
 
         <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-stdlib-test</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
             <version>${oap.deps.undertow.version}</version>
