--- a/oap-http/oap-http/src/main/resources/META-INF/oap-module.conf
+++ b/oap-http/oap-http/src/main/resources/META-INF/oap-module.conf
@@ -73,3 +73,12 @@ services {
     supervision.supervise = true
   }
 }
+
+configurations = [
+  {
+    loader = oap.json.TypeIdFactory
+    config = {
+      cookie = io.undertow.server.handlers.CookieImpl
+    }
+  }
+]
