OAP-129 SSO: ref token validation

--- a/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
@@ -1,7 +1,7 @@
 name = oap-ws-sso-api
 
 services {
-  oap-ws-sso-roles-provider.implementation = oap.ws.sso.ConfigSecurityRolesProvider
+  oap-ws-sso-roles-providerimplementation = oap.ws.sso.ConfigSecurityRolesProvider
 
   oap-ws-sso-roles {
     implementation = oap.ws.sso.SecurityRoles
