OAP-129 SSO: ref token validation

--- a/oap-ws/oap-ws-sso-api/src/test/resources/META-INF/oap-ws-roles.yaml
+++ b/oap-ws/oap-ws-sso-api/src/test/resources/META-INF/oap-ws-roles.yaml
@@ -1,4 +1,9 @@
 roles:
-  ADMIN: [ "generic:megatest", "generic:manage" ]
-  MEGADMIN: [ "generic:megatest", "generic:manage" ]
-  USER: [ "generic:manage" ]
+  ADMIN:
+    - generic:megatest
+    - generic:manage
+  MEGADMIN:
+    - generic:megatest
+    - generic:manage
+  USER:
+    - generic:manage
