OAP-129 SSO: ref token validation

--- a/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
@@ -1,28 +1,26 @@
 name = oap-ws-sso-api
 
 services {
-  oap-ws-sso-roles-provider.implementation = oap.ws.sso.ConfigSecurityRolesProvider
+  oap-ws-sso-roles-provider {
+    implementation = oap.ws.sso.ConfigSecurityRolesProvider
+  }
 
   oap-ws-sso-roles {
     implementation = oap.ws.sso.SecurityRoles
     parameters.provider = <modules.this.oap-ws-sso-roles-provider>
   }
 
-  jwt-token-generator {
-    implementation = oap.ws.sso.JwtTokenGenerator
-    parameters {
-        accessSecret = <change me>
-        refreshSecret = <change me>
-        issuer = <change me>
-        accessSecretExpiration = 15m
-        refreshSecretExpiration = 1d
+  oap-ws-sso-user-provider {
+    implementation = oap.ws.sso.UserProvider
+    remote {
+      name = oap-account.default-user-provider
     }
   }
 
   oap-ws-sso-api-key-interceptor {
     implementation = oap.ws.sso.interceptor.ApiKeyInterceptor
     parameters {
-      authenticator = <modules.oap-ws-sso.oap-ws-sso-authenticator>
+      userProvider = <modules.this.oap-ws-sso-user-provider>
     }
   }
 
@@ -30,12 +28,11 @@ services {
     implementation = oap.ws.sso.interceptor.ThrottleLoginInterceptor
   }
 
-  oap-ws-sso-token-extractor {
-    implementation = oap.ws.sso.JWTExtractor
-      parameters {
-        secret = <change me>
-        issuer = <change me>
-        roles = <modules.this.oap-ws-sso-roles>
-      }
+  oap-ws-sso-jwt-security-interceptor {
+    implementation = oap.ws.sso.interceptor.JWTSecurityInterceptor
+    parameters {
+      userProvider = <modules.this.oap-ws-sso-user-provider>
+      roles = <modules.oap-ws-sso-api.oap-ws-sso-roles>
+    }
   }
 }
