--- a/oap-storage/oap-storage-cloud-test/pom.xml
+++ b/oap-storage/oap-storage-cloud-test/pom.xml
@@ -28,7 +28,13 @@
         <dependency>
             <groupId>com.adobe.testing</groupId>
             <artifactId>s3mock</artifactId>
-            <version>3.5.2</version>
+            <version>3.8.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-jcl</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
