OAP-134 ws-service: add enabled: true/false

--- a/oap-ws/oap-ws-test/src/test/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-test/src/test/resources/META-INF/oap-module.conf
@@ -61,6 +61,13 @@ services {
     }
     ws-service.path = vpj
   }
+  ws-disabled {
+    implementation = oap.ws.WebServicesTest.MathWS
+    ws-service {
+      path = test-disabled
+      enabled = false
+    }
+  }
 
 
   handler {
