OAP-000 empty png

--- a/oap-http/oap-http/src/main/resources/META-INF/oap-module.conf
+++ b/oap-http/oap-http/src/main/resources/META-INF/oap-module.conf
@@ -72,6 +72,15 @@ services {
 
     supervision.supervise = true
   }
+
+  oap-http-zero-png-handler {
+    enabled = false
+    implementation = oap.http.server.nio.ZeroPngHttpHandler
+    parameters {
+      server = <modules.this.oap-http-server>
+      prefix = /static/pixel.png
+    }
+  }
 }
 
 configurations = [
