OAP-000 speed up mailman

--- a/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
+++ b/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
@@ -23,10 +23,11 @@ services {
     parameters {
       transport = <modules.this.oap-mail-transport>
       queue = <modules.this.oap-mail-queue>
+      retryPeriod = 1m
     }
     supervision {
-      schedule = true
-      delay = 1m
+      supervise = true
+      thread = true
     }
   }
 }
