OAP-198 oap-logstream-parquet

--- a/oap-formats/oap-logstream/oap-logstream-test/pom.xml
+++ b/oap-formats/oap-logstream/oap-logstream-test/pom.xml
@@ -50,6 +50,11 @@
         </dependency>
         <dependency>
             <groupId>oap</groupId>
+            <artifactId>oap-logstream-tsv</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oap</groupId>
             <artifactId>oap-logstream-net-client</artifactId>
             <version>${project.version}</version>
         </dependency>
