--- a/oap-formats/oap-logstream/pom.xml
+++ b/oap-formats/oap-logstream/pom.xml
@@ -20,6 +20,7 @@
 
     <modules>
         <module>oap-logstream</module>
+        <module>oap-logstream-tsv</module>
         <module>oap-logstream-parquet</module>
         <module>oap-logstream-data</module>
         <module>oap-logstream-data-object</module>
