OAP-214 oap-template: [go template syntax] start expression with .

--- a/oap-formats/oap-logstream/oap-logstream/pom.xml
+++ b/oap-formats/oap-logstream/oap-logstream/pom.xml
@@ -123,7 +123,7 @@
 
         <dependency>
             <groupId>org.antlr</groupId>
-            <artifactId>stringtemplate</artifactId>
+            <artifactId>ST4</artifactId>
             <version>${oap.deps.stringtemplate.version}</version>
         </dependency>
 
