Detecting timeouts when a service stops

--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/application.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/application.conf
@@ -1,5 +1,13 @@
 boot.main = m3
 
+shutdown {
+  serviceTimeout = 1
+  serviceTimeout = ${?SHUTDOWN_SERVICE_TIMEOUT}
+
+  serviceAsyncShutdownAfterTimeout = false
+  serviceTimeout = ${?SHUTDOWN_SERVICE_ASYNC_SHUTDOWN_AFTER_TIMEOUT}
+}
+
 services {
   m2.ServiceTwo.parameters.j = ${a.b}
   m1.ServiceOneP1.parameters.i2 = ${one.i2}
