--- a/oap-formats/oap-logstream/oap-logstream/pom.xml
+++ b/oap-formats/oap-logstream/oap-logstream/pom.xml
@@ -42,8 +42,19 @@
 
         <dependency>
             <groupId>org.apache.parquet</groupId>
-            <artifactId>parquet-hadoop-bundle</artifactId>
+            <artifactId>parquet-hadoop</artifactId>
             <version>${oap.deps.parquet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-aws</artifactId>
+            <version>${oap.deps.hadoop.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>bundle</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -123,7 +134,7 @@
 
         <dependency>
             <groupId>org.antlr</groupId>
-            <artifactId>stringtemplate</artifactId>
+            <artifactId>ST4</artifactId>
             <version>${oap.deps.stringtemplate.version}</version>
         </dependency>
 
